--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,6 +24,38 @@ body {
     opacity: 0.7;
 }
 
+/* ------------------------------------------ */
+
+.regular-page {
+    height: 77vh;
+    background-color: #7a9d96;
+    padding: 13vh 5vh 10vh 5vh;
+    color: white;
+    font-size: 6vw;
+    overflow: auto;
+}
+
+.regular-button {
+    margin-top: 6vw;
+    background-color: white;
+    color: #7a9d96;
+    border: none;
+    font-weight: bold;
+    font-size: 6vw;
+    padding: 3vw 5vw;
+}
+.regular-button a {
+    text-decoration: none;
+    color: #7a9d96;
+}
+
+input, button {
+    font-family: 'Arsenal', sans-serif;
+}
+/* ------------------------------------------- */
+
+
+
 #questions-section {
     overflow: auto;
     padding: 15vh 5vw 3vh 5vw;
