--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -66,12 +66,12 @@ input, button {
     font-size: 7.5vw;
 }
 
-#answer-input.incorrect {
+form input.incorrect {
     border-color: #ff8e61;
     box-shadow: inset 1px 1px 6px #df744a;
 }
 
-#answer-input {
+form input:not([type='submit']) {
     width: 60vw;
     margin: 30px 0;
     padding: 2vw;
@@ -94,6 +94,11 @@ input, button {
     border: 0px;
     padding: 2.2vh 6vw;
     cursor: pointer;
+}
+
+.error-message {
+    color: #ffd5da;
+    margin-top: 3vh;
 }
 
 #hint-container {
