admin panel introduced with the ability to create and update quests (not possible to edit questions so far)

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,13 +88,16 @@ form input:not([type='submit']) {
     margin-top: 30px;
 }
 
-#submit {
-    font-size: 6vw;
+.submit {
     background-color: #7a9d96;
-    color: #fff;
     border: 0px;
     padding: 2.2vh 6vw;
     cursor: pointer;
+}
+
+.submit a {
+    font-size: 6vw;
+    color: #fff;
 }
 
 .error-message {
