--- a/src/styles/accordion.css
+++ b/src/styles/accordion.css
@@ -1,65 +1,23 @@
-/* body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding: 50px 0;
-  background-color: #fcfcfc;
-  min-height: 100vh;
-  font-size: 16px;
-  line-height: 1.4;
-  font-family: "Montserrat", sans-serif;
-  color: #372717;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  overflow-y: scroll;
-} */
-
-/* .accordion-holder {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding: 50px 0;
-    background-color: #fcfcfc;
-    min-height: 100vh;
-    font-size: 16px;
-    line-height: 1.4;
-    font-family: "Montserrat", sans-serif;
-    color: #372717;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow-y: scroll;
-} */
-
 .accordion {
     width: 100%;
-    max-width: 470px;
 }
 
-/* .panel {
-    background-color: #f0ebe1;
-} */
+.panel {
+    border: solid 1px #6f968e;
+    margin: 3vh 1vw;
+}
 
 .panel__label {
+    padding: 2.5vh 12vw 2.5vh 7vw;
     position: relative;
     display: block;
     width: 100%;
-    background: none;
     border: none;
-    text-align: left;
-    padding: 25px 60px 25px 25px;
-    font-weight: 500;
-    font-size: 17px;
-    font-family: inherit;
-    -webkit-transition: color 0.2s linear;
-    transition: color 0.2s linear;
-    cursor: pointer;
+    background: none;
     text-align: center;
+    cursor: pointer;
+    transition: color 0.2s linear;
+    -webkit-transition: color 0.2s linear;
 }
 
 .panel__label:focus {
@@ -69,12 +27,12 @@
 .panel__label:after, .panel__label:before {
     content: "";
     position: absolute;
-    right: 25px;
+    right: 4vw;
     top: 50%;
     width: 22px;
     height: 2px;
     margin-top: -2px;
-    background-color: #372717;
+    background-color: #6f968e;
 }
 
 .panel__label:before {
@@ -90,9 +48,9 @@
     opacity: 1;
 }
 
-/* .panel[aria-expanded="true"] .panel__label {
-    color: #957029;
-} */
+.panel[aria-expanded="true"] .panel__label {
+    font-weight: bold;
+}
 
 .panel[aria-expanded="true"] .panel__label:before {
     -webkit-transform: rotate(0deg);
@@ -108,8 +66,6 @@
 
 .panel__content {
     margin: 5px 25px 25px;
-    font-size: 14px;
-    /* color: #756658; */
     opacity: 0;
     -webkit-transition: opacity 0.3s linear 0.18s;
     transition: opacity 0.3s linear 0.18s;
@@ -117,4 +73,8 @@
 
 .panel:not(:last-child) {
     margin-bottom: 3px;
+}
+
+.accordion .panel {
+    font-size: 4.5vw;
 }
