--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -6,36 +6,38 @@
 .admin-page {
   margin: 8vh 2vw;
   padding: 1vh 1vw;
+  font-size: var(--base-font-size);
+  color: var(--base-font-color);
+}
+
+.admin-page button {
+  font-size: inherit;
+  color: inherit;
 }
 
 .admin-page a {
   text-decoration: none;
+  color: inherit;
 }
 
-.admin-button {
+.admin-page .admin-button {
   background-color: #7a9d96;
   border: 0px;
-  margin: 2vh 1vw;
-  padding: 1.3vh 4vw;
+  margin: 4vh 1vw;
+  padding: 2vh 4vw;
   cursor: pointer;
-  font-size: var(--base-font-size);
+  color: #fff;
 }
 
-.admin-button, .admin-button a {
+.admin-button a {
   color: #fff;
 }
 
 .quests-item {
-  margin: 1vh 0vh;
+  margin: 2vh 0vh;
   cursor: pointer;
   border-bottom: 1px dotted;
   width: max-content;
-}
-
-.quests-item a {
-  font-size: var(--base-font-size);
-  ;
-  color: var(--base-font-color)
 }
 
 .quests-items-container {
@@ -44,21 +46,20 @@
   align-items: center;
 }
 
-.quest-prop {
-  font-size: var(--base-font-size);
-  padding: 1vh 1vw;
+.prop-content {
+  padding: 2vh 4vw;
   margin: 1vh 1vw;
 }
 
-.quest-prop[contenteditable=true] {
-  border: solid 1px var(--base-font-color);
+.prop-content[contenteditable=true] {
+  background: #FBFBFA;
 }
 
-.quest-prop[contenteditable=true].unsaved {
+.prop-content[contenteditable=true].unsaved {
   color: #C7818B;
 }
 
-.quest-prop[contenteditable=true]:focus {
+.prop-content[contenteditable=true]:focus {
   background: #FBFBFA;
 }
 
@@ -66,7 +67,10 @@
   margin: 3vh 4vw;
 }
 
+.quest-prop {
+  margin: 5vh 0;
+}
+
 .prop-title {
   font-weight: bold;
-  font-size: var(--base-font-size);
 }
