simplified error propagation solution on QuestPage

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,3 +1,17 @@
+:root {
+  --input-incorrect-color: #ff8e61;
+}
+
+.input-error-message, input.incorrect {
+  color: var(--input-incorrect-color) !important;
+}
+
 input.incorrect {
-  border: solid 1px #ff8e61 !important;
+  border: solid 1px var(--input-incorrect-color) !important;
+}
+
+.input-error-message {
+  height: 2.5vh;
+  margin: 1vh 0 3vh;
+  font-size: 2.4vh;
 }
