--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -81,7 +81,7 @@ input:not([type='submit']) {
 
 /* ------------------------------------------- */
 
-#questions-section {
+.light-page {
     overflow: auto;
     padding: 15vh 5vw 3vh 5vw;
 }
@@ -91,16 +91,18 @@ input:not([type='submit']) {
     font-size: 7.5vw;
 }
 
-form input.incorrect {
-    border-color: #ff8e61;
-    box-shadow: inset 1px 1px 6px #df744a;
-}
-
 form input:not([type='submit']) {
     width: 60vw;
-    margin: 30px 0;
     padding: 2vw;
     border: solid 1px var(--color-dark);
+}
+
+.regular-page form input:not([type='submit']) {
+    margin: 30px 0;
+}
+
+.light-page form input:not([type='submit']) {
+    margin-top: 30px;
 }
 
 .button-holder {
@@ -126,8 +128,8 @@ form input:not([type='submit']) {
 
 #hint-container {
     font-size: 5.5vw;
-    margin: 10px 0 30px;
-    height: 50px;
+    margin: 3vh 0 5vh;
+    height: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
