--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,8 @@
     --base-font-size: 5vw;
     --base-font-color: #073c4e;
     --color-dark: #7a9d96;
+    --color-safe: #7A9D96;
+    --color-danger: #C7818B;
     --color-light: #f2f3ed;
 }
 
@@ -54,6 +56,15 @@ input:not([type='submit']) {
     font-size: 6vw;
     overflow: auto;
     white-space: pre-wrap;
+}
+
+.quests-item-buttons {
+    margin: 1.6vh 0 1vh;
+    display: flex;
+    justify-content: center;
+}
+.quests-item-buttons > * {
+    margin: 0 1.4vw;
 }
 
 .regular-button {
