--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Arsenal&subset=cyrillic);
+
 :root {
     --base-font-size: 5vw;
     --base-font-color: #073c4e;
@@ -40,10 +41,34 @@ input:not([type='submit']) {
     background-color: #444;
     color: #fff;
     position: fixed;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
     top: 7px;
     left: 0;
     width: 100%;
     opacity: 0.7;
+}
+
+#sticky-title h1 {
+    margin: 0;
+    font-size: 4vh;
+}
+
+#sticky-title button {
+    border: none;
+    background: none;
+}
+
+#sticky-title img {
+    width: 25px;
+}
+
+.one-third {
+    flex-basis: 10%;
+    display: flex;
+    align-items: center;
 }
 
 /* ------------------------------------------ */
@@ -63,6 +88,7 @@ input:not([type='submit']) {
     display: flex;
     justify-content: center;
 }
+
 .quests-item-buttons > * {
     margin: 0 1.4vw;
 }
@@ -160,19 +186,19 @@ form input:not([type='submit']) {
     margin-top: 2vh;
 }
 
-.question-img:first-child:nth-last-child(6), .question-img:first-child:nth-last-child(6)~.question-img {
+.question-img:first-child:nth-last-child(6), .question-img:first-child:nth-last-child(6) ~ .question-img {
     width: 30%;
 }
 
-.question-img:first-child:nth-last-child(4), .question-img:first-child:nth-last-child(4)~.question-img {
+.question-img:first-child:nth-last-child(4), .question-img:first-child:nth-last-child(4) ~ .question-img {
     width: 45%;
 }
 
-.question-img:first-child:nth-last-child(3), .question-img:first-child:nth-last-child(3)~.question-img {
+.question-img:first-child:nth-last-child(3), .question-img:first-child:nth-last-child(3) ~ .question-img {
     width: 30%;
 }
 
-.question-img:first-child:nth-last-child(2), .question-img:first-child:nth-last-child(2)~.question-img {
+.question-img:first-child:nth-last-child(2), .question-img:first-child:nth-last-child(2) ~ .question-img {
     width: 45%;
 }
 
@@ -189,7 +215,7 @@ form input:not([type='submit']) {
     vertical-align: middle;
 }
 
-img {
+.question-img img {
     text-justify: auto;
     width: 90%;
     height: auto;
@@ -375,6 +401,6 @@ div.highlight {
     box-shadow: inset 1px 1px 6px #df744a;
 }
 
-.bold-text{
+.bold-text {
     font-weight: bold
 }
