--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -134,8 +134,27 @@ form input:not([type='submit']) {
     border: solid 1px var(--color-dark);
 }
 
-.regular-page form input:not([type='submit']) {
-    margin: 30px 0;
+/*.regular-page form input:not([type='submit']) {*/
+/*    margin: 30px 0;*/
+/*}*/
+
+.input-block {
+    margin: 33px 0;
+}
+
+.input-block label {
+    display: block;
+    margin-bottom: 15px;
+}
+
+.input-block input {
+    margin: 0;
+}
+
+.input-block .error {
+    margin: 5px 0;
+    color: #ffd5da;
+    font-size: 2.4vh;
 }
 
 .light-page form input:not([type='submit']) {
