--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -54,6 +54,20 @@
     padding: 10px;
 }
 
+.copy-link {
+    cursor: pointer;
+    margin-left: 7px;
+    vertical-align: -2px;
+    font-size: 0;
+    white-space: nowrap;
+}
+
+.copy-icon {
+    display: inline-block;
+    width: auto;
+    height: 22px;
+}
+
 .stats {
     margin: 20px 0;
 }
