--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -33,6 +33,13 @@
     background: #FBFBFA;
 }
 
+.prop-content textarea {
+    width: 90%;
+    font-size: 14px;
+    color: var(--base-font-color);
+    border: none;
+}
+
 .codes-table {
     padding: 10px;
     margin: 0 auto 40px auto;
