--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -40,6 +40,14 @@
     border: none;
 }
 
+.prop-content a {
+    text-decoration: underline;
+}
+
+.prop-content a:hover {
+    color: var(--color-dark);
+}
+
 .codes-table {
     padding: 10px;
     margin: 0 auto 40px auto;
@@ -97,3 +105,4 @@
 .prop-title {
     font-weight: bold;
 }
+
