--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,7 +14,6 @@ body {
     color: var(--base-font-color);
     font-size: var(--base-font-size);
     background-color: var(--color-light);
-    font-weight: 300;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -124,7 +123,7 @@ input:not([type='submit']) {
 }
 
 #question {
-    margin: 30px 0px;
+    margin: 30px 0;
     font-size: 7.5vw;
 }
 
