- added possibility to clone quests - icons for each quest action button

--- a/src/styles/accordion.css
+++ b/src/styles/accordion.css
@@ -57,6 +57,9 @@
     color: var(--color-light);
     background: var(--color-dark);
 }
+.action-button svg {
+    margin: 0;
+}
 .action-button-main {
     width: 23vw;
 }
