--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -16,6 +16,10 @@
     color: #fff;
 }
 
+.quests-item-buttons .action-button {
+    cursor: pointer;
+}
+
 .prop-content {
     padding: 7px 3px;
     white-space: pre-wrap;
@@ -77,18 +81,9 @@
     padding: 10px;
 }
 
-.copy-link {
+.copy-to-clipboard svg {
+    color: var(--color-dark);
     cursor: pointer;
-    margin-left: 7px;
-    vertical-align: -2px;
-    font-size: 0;
-    white-space: nowrap;
-}
-
-.copy-icon {
-    display: inline-block;
-    width: auto;
-    height: 22px;
 }
 
 .stats {
@@ -114,4 +109,3 @@
 .prop-title {
     font-weight: bold;
 }
-
